# lsassy

./: .coverage  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  lsassy.spec  noxfile.py  pyproject.toml  requirements.txt  setup.py  test.py  tests.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  lsassy.yml  release.yaml  test-pypi.yaml  tests.yaml
cme/: README.md  lsassy.py  lsassy3.py  lsassy_py2.py  requirements.txt
examples/: get_credentials.py
hooks/: hook-lsassy.py
lsassy/: __init__.py  __main__.py  console.py  core.py  core.py.orig  credential.py  defines.py  dumper.py  harvester.py  impacketconnection.py  impacketfile.py  log.py  logger.py  lsassy.py  parser.py  session.py  taskexe.py  utils.py  winrmfile.py  wmi.py  writer.py
lsassy/dpapi/: recon.py
lsassy/dpapi/config/: constant.py  module_management.py  moduleinfo.py
lsassy/dpapi/crypto/: pyDES.py
lsassy/dpapi/module/: firefox.py  pidgin.py  postgresql.py  thunderbird.py
lsassy/dumpmethod/: __init__.py  comsvcs.py  comsvcs_stealth.py  dllinject.py  dummy.py  dummy.py.tpl  dumpert.py  dumpertdll.py  edrsandblast.py  extract.py  idumpmethod.py  mirrordump.py  mirrordump_embedded.py  nanodump.py  nanodump_ssp_embedded.py  nativedump_embedded.py  ppldump.py  ppldump_embedded.py  procdump.py  procdump_embedded.py  rawrpc.py  rawrpc_embedded.py  rdrleakdiag.py  silentprocessexit.py  sqldumper.py  wer.py
lsassy/exec/: __init__.py  iexec.py  mmc.py  smb.py  smb_stealth.py  task.py  taskexe.py  winrm.py  wmi.py
lsassy/modules/: __init__.py  dumper.py  impacketconnection.py  impacketfile.py  logger.py  parser.py  writer.py
lsassy/output/: __init__.py  grep_output.py  ioutput.py  json_output.py  pretty_output.py  table_output.py
lsassy/utils/: defines.py  utils.py  utils.py.orig
lsassy_test/: lsassy_test.py  lsassy_test_config.py.template
src/lsassy/: console.py  core.py  credential.py  impacketfile.py  parser.py  session.py
src/lsassy/dumpmethod/: dummy.py
src/lsassy/exec/: smb.py  wmi.py
src/lsassy/output/: ioutput.py
test/: test.py  test_config.py.template  tests.config.sh.bak  tests.config.sh.tpl  tests.sh  tests_dev.sh
tests/: conftest.py  context.py  test_app.py  test_lsassy.py  tests.py  tests_config.py.template
