[project]
name = "lsassy"
version = "3.1.14"
description = "Python library to extract credentials from lsass remotely"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "pixis", email = "pixis@hackndo.com" }
]
dependencies = [
    "impacket>=0.11.0",
    "netaddr>=1.3.0",
    "pypykatz>=0.6.9",
    "rich>=13.7.1"
]

[project.scripts]
lsassy = "lsassy.console:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.1",
    "pre-commit>=3.7.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PYI",      # flake8-pyi
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "G001",     # Format in log
  "G004",     # F-string in log
  "RUF012",   # Mutable class attributes annotations
  "RUF013",   # Implicit Optional
  "PT009",    # Regular Assert
]
